Java 7 conversion compiles