@@ -2,36 +2,51 @@ package com.truelayer.signing;
 
 import com.nimbusds.jose.util.Base64URL;
 
+import javax.xml.bind.DatatypeConverter;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class Utils {
 
     protected static Map<String, Object> jwsHeaderMap(String kid, Map<HeaderName, String> headers) {
+        StringBuilder sb = new StringBuilder();
+        int counter = 0;
+        for (Map.Entry<HeaderName, String> entry: headers.entrySet()) {
+            HeaderName name = entry.getKey();
+            sb.append(name.getName());
+            if (counter < headers.size() - 1)
+                sb.append(",");
+            counter++;
+        }
+
         Map<String, Object> jwsheader = new HashMap<>();
         jwsheader.put("alg", "ES512");
         jwsheader.put("kid", kid);
         jwsheader.put("tl_version", "2");
-        jwsheader.put("tl_headers", headers.keySet().stream().map(HeaderName::getName).collect(Collectors.joining(",")));
+        jwsheader.put("tl_headers", sb.toString());
         return jwsheader;
     }
 
     public static Base64URL buildPayload(Map<HeaderName, String> headers, String method, String path, byte[] body) {
 
-        String headersString = headers.keySet().stream().map(k -> k.getName() + ": " + headers.get(k)).collect(Collectors.joining("\n"));
+        StringBuilder headerStringBuilder = new StringBuilder();
+        for (Map.Entry<HeaderName, String> entry: headers.entrySet()) {
+            HeaderName name = entry.getKey();
+            String val = entry.getValue();
+            headerStringBuilder.append(name.getName());
+            headerStringBuilder.append(":");
+            headerStringBuilder.append(val);
+            headerStringBuilder.append("\n");
+        }
 
-        String payload = new StringBuilder(method.toUpperCase())
-                .append(" ")
-                .append(path)
-                .append("\n")
-                .append(headersString)
-                .append("\n")
-                .append(new String(body))
-                .toString();
+        String payload = method.toUpperCase() +
+                " " +
+                path +
+                "\n" +
+                headerStringBuilder +
+                new String(body);
 
-        return Base64URL.from(Base64.getUrlEncoder().withoutPadding().encodeToString(payload.getBytes(StandardCharsets.UTF_8)));
+        return Base64URL.from(DatatypeConverter.printBase64Binary(payload.getBytes(StandardCharsets.UTF_8)));
     }
 }
